Updating readme, new results, new GC profiling